SDI-2223-307-sesión3-Ejercicio-complementario2

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,8 @@ Error.signup.name.length=El nombre debe tener entre 5 y 24 caracteres.
 Error.signup.lastName.length=El apellido debe tener entre 5 y 24 caracteres.
 Error.signup.password.length =La contraseña debe tener entre 5 y 24 caracteres.
 Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden.
+Error.mark.score.range= La puntuacion debe encontrarse entre 0 y 10.
+Error.mark.score.duplicate= La nota ya esta en la base
+Error.mark.description.length= La descripcion debe tener minimo 20 caracteres.
+Error.professor.dni.duplicate=Este DNI ya existe.
+Error.professor.dni.length=El DNI debe ser de 9 digitos.
